--- a/frontend/ecotrade-frontend/package.json
+++ b/frontend/ecotrade-frontend/package.json
@@ -10,9 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.89.0",
+    "axios": "^1.6.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "axios": "^1.6.2"
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
